bluec-tests/tests/valid/types_pointer/compare_explicit_and_implict_addr.c
int main(void)
{
    int arr[10];
    // Like clang/gcc, we allow this and emit a warning.
    return arr == &arr;
}