bluec-tests/tests/invalid/types_float/invalid_type_specifier_2.c
int main(void) {
    /* "float float" is not a valid type specifier */
    float float f = 10.0f;
    return 0;
}